12227 edit TestForm: fixed broken styles

--- a/src/styles/components/TestForm.module.scss
+++ b/src/styles/components/TestForm.module.scss
@@ -5,6 +5,12 @@
   flex-direction: column;
   gap: 16px;
 
+  & .fieldContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
   & .submitButton {
       width: max-content;
   }
